# Maxwell_Solver

./: .gitignore  1d_anim_maxwell.py  README.md  dynamic_img_anim_maxwell.py  maxwell.py  maxwell_source_as_BC.py  scatter_field_maxwell.py  superluminal_demo_maxwell.py  test.py
CPP_Maxwell_Solver/: 3d_plane_wave.py  maxwell.cpp  maxwell_3d.cpp  maxwell_3d_permittivity.cpp  maxwell_pml.cpp  maxwell_pml_2.cpp  maxwell_try.cpp  numatest  plotit.py  profile_pml_2.txt  test.py
CPP_Maxwell_Solver/anim/: list.txt
ExtraCodes/: Program26_FDTD_2D_with_PEC_boundary.m  maxwell_copied.py
Learn_CPP/: hdf5_learn.cpp  hello_world.cpp  read_write_hdf5.cpp  simple_hdf5.cpp  test.py
OpenMP_Testing/: test.cc  test2.cc
Parallel_codes/: EMsolver  hello_world.cc  maxwell  parameters.yaml  plotit.py  plotit2D.py  profile.txt  read_img_to_hdf5.py  test.py  tmp_plot2d.py
Parallel_codes/install/: CMakeLists.txt  compile.sh  main.cc  quickMake.sh  recompile.sh  remake.sh
Parallel_codes/lib/: field.h  grid.h  maxwell.h  mpidata.h  parallel.h  reader.h  vfield.h  writer.h
Parallel_codes/src/: field.cc  grid.cc  maxwell.cc  mpidata.cc  parallel.cc  reader.cc  test.cc  vfield.cc  writer.cc
